--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.21
+Version: 1.22
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1107,6 +1107,13 @@ body.mobilenavopen  {
 
 /* Flexible content */
 
+.page-template-default #content {
+	padding: 155px 0 100px 0;
+	.container {
+		max-width: 900px;
+	}
+}
+
 .transparent {
 	background-color:transparent;
 }
@@ -2031,14 +2038,14 @@ body.mobilenavopen  {
 							position: absolute;
 								right: 12px;
 								top: 11px;
-							transition: all 0.5s linear;
+							transition: all 0.2s linear;
 							vertical-align: middle;
 							width:15px;
 							
 						}
 						&:hover > a:after {
 							opacity:0;
-							transition: all 0.3s linear;
+							transition: all 0.2s linear;
 						}
 						
 					}
@@ -2054,7 +2061,7 @@ body.mobilenavopen  {
 						position: absolute;
 							top: 50px;
 							left: 0;
-						transition: all 0.5s ease;
+						transition: all 0.2s ease;
 						z-index: 9999;
 						li {
 							float:none;
@@ -2063,7 +2070,7 @@ body.mobilenavopen  {
 								color: #fff;
 								height: 50px;
 								line-height: 50px;
-								margin: 0 20px;
+								margin: 0 ;
 								overflow: hidden;
 								width: 220px;
 								&:hover {
@@ -2100,7 +2107,7 @@ body.mobilenavopen  {
 							overflow: visible;
 							padding: 0;
 							pointer-events: all;
-							transition: all 0.5s ease;	
+							transition: all 0.2s ease;	
 						}
 					}
 				}
@@ -2263,16 +2270,6 @@ html {
 				text-align: center;
 			}
 			
-			
-			.tribe-events-calendar-list__event-date-tag {
-				background: $colour-link;
-				color: #fff;
-				padding: 20px;
-				time {
-					padding: 0;
-				}
-			}
-			
 			.tribe-events-calendar-list__event-wrapper {
 				padding-right: 0;
 				h3 a {
@@ -2338,7 +2335,7 @@ html {
 		padding: 30px;
 		.tribe-events-calendar-list__event-date-tag,
 		.tribe-events-calendar-latest-past__event-date-tag {
-			background: $colour-link;
+			background: $colour-text;
 			color: #fff;
 			font-weight: $bold;
 			padding: 20px;
@@ -2368,7 +2365,6 @@ html {
 
 #attendanceRoster {
 	background: #fff;
-	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	margin-bottom: 30px;
 	padding:30px;
 	transition:all 0.2s linear;
@@ -2443,7 +2439,6 @@ html {
 
 #slotTool {
 	background: #fff;
-	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	margin-bottom: 30px;
 	padding:30px;
 }
@@ -2479,15 +2474,19 @@ input[type="submit"].slotIcon {
 #slotToolButtons {
 	padding: 30px;
 	text-align: center;
-	br {
-		display: none;
-		
+	a {
+		margin:0 10px;
 	}
 }
 
 
+.tribe-events-sub-nav {
+	list-style:none;
+}
 
-
+.tribe-events-single .tribe-events-sub-nav a span {
+	display: inline-block;
+}
 
 .unit {
 	margin-bottom:30px;
@@ -2521,8 +2520,7 @@ html {
 			.epkb-doc-search-container {
 				background: #222;
 				margin-bottom: 30px!important;
-				padding: 50px 0 60px 0;
-				padding-top:135px;
+				padding: 145px 0 70px 0;
 				
 				div.epkb-doc-search-container__title,
 				h1.epkb-doc-search-container__title {
@@ -2531,7 +2529,7 @@ html {
 				}
 				#epkb_search_form {
 					#epkb_search_terms {
-						border: 2px solid #ccc;
+						border: 2px solid #fff;
 						border-right:0; 
 						border-radius: 0!important;
 						font-family: $base-font-family;
@@ -2543,6 +2541,12 @@ html {
 						border-radius: 0!important;
 						font-family: $base-font-family;
 						text-shadow: none;
+						transition: all 0.2s linear;
+						&:hover {
+							background: $colour-link-hover;	
+							border: $colour-link-hover;
+							transition: all 0.2s linear;
+						}
 					}
 				}
 				.epkb-doc-search-container__title {
