--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.23
+Version: 1.24
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1651,6 +1651,9 @@ body.mobilenavopen  {
 		}
 	}
 
+.error404,
+.search,
+.search-results,
 .archive,
 .blog {
 	
@@ -1664,6 +1667,9 @@ body.mobilenavopen  {
 		img {
 			width:100%;
 		}
+	}
+	.eight {
+		padding-bottom: 100px;
 	}
 }
 
@@ -1809,19 +1815,7 @@ body.mobilenavopen  {
 	list-style:none;
 	margin:0 ;
 	padding:0 0 40px 0;
-	#submit {
-		float:left;
-		margin-left:5px;
-	}
 	
-	#s {
-		border:1px solid #ccc;
-	}
-	
-	#searchsubmit {
-		background: $colour-button;
-		color: #fff;
-	}
 
 	> li {
 		background:#fff;
@@ -1879,6 +1873,24 @@ body.mobilenavopen  {
 
 #searchsubmit {
     width: 60px;
+}
+
+#submit {
+	float:left;
+	margin-left:5px;
+}
+
+#s {
+	border:1px solid #ccc;
+}
+
+#searchsubmit {
+	background: $colour-button;
+	color: #fff;
+	&:hover {
+		background: $colour-button-hover;
+		border-color: $colour-button-hover;
+	}
 }
 
 #searchwrapper {
