--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.23
+Version: 1.24
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1750,17 +1750,33 @@ body.mobilenavopen {
     max-width: 1200px;
   }
 }
+.error404 .contentWrap,
+.search .contentWrap,
+.search-results .contentWrap,
 .archive .contentWrap,
 .blog .contentWrap {
   background: #eee;
 }
+.error404 .post,
+.search .post,
+.search-results .post,
 .archive .post,
 .blog .post {
   margin-bottom: 40px;
 }
+.error404 .news-thumb img,
+.search .news-thumb img,
+.search-results .news-thumb img,
 .archive .news-thumb img,
 .blog .news-thumb img {
   width: 100%;
+}
+.error404 .eight,
+.search .eight,
+.search-results .eight,
+.archive .eight,
+.blog .eight {
+  padding-bottom: 100px;
 }
 
 .single {
@@ -1890,17 +1906,6 @@ body.mobilenavopen {
   margin: 0;
   padding: 0 0 40px 0;
 }
-#sidebar #submit {
-  float: left;
-  margin-left: 5px;
-}
-#sidebar #s {
-  border: 1px solid #ccc;
-}
-#sidebar #searchsubmit {
-  background: #2271b1;
-  color: #fff;
-}
 #sidebar > li {
   background: #fff;
   margin: 0 0 40px 0;
@@ -1952,6 +1957,24 @@ body.mobilenavopen {
 
 #searchsubmit {
   width: 60px;
+}
+
+#submit {
+  float: left;
+  margin-left: 5px;
+}
+
+#s {
+  border: 1px solid #ccc;
+}
+
+#searchsubmit {
+  background: #2271b1;
+  color: #fff;
+}
+#searchsubmit:hover {
+  background: rgb(46.9620853081, 139.8151658768, 215.0379146919);
+  border-color: rgb(46.9620853081, 139.8151658768, 215.0379146919);
 }
 
 #searchwrapper {
