--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.26
+Version: 1.27
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -38,6 +38,10 @@ Primary Branch: main
 		
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block; 
+}
+
+html {
+	scroll-behavior: smooth;
 }
 
 body {
@@ -135,9 +139,9 @@ p.has-large-font-size { font-size: 18px; line-height: 1.4;}
 			font-size: $base-font-size;
 		}
 		
-		h1 { font-size: 100px; }
-		h2 { font-size: 80px; }
-		h3 { font-size: 50px; }
+		h1 { font-size: 80px; }
+		h2 { font-size: 55px; }
+		h3 { font-size: 45px; }
 		h4 { font-size: 35px; }
 		h5 { font-size: 30px; }
 		h6 { font-size: 25px; }
@@ -168,7 +172,7 @@ blockquote cite {
 
 blockquote cite a, blockquote cite a:visited, blockquote cite a:visited { color: #555; }
 
-hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
+hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 20px 0 ; height: 0; }
 
 /* #Links */
 
@@ -807,6 +811,7 @@ body.mobilenavopen  {
 	
 	&.scrollHeader {
 		background:rgba(255,255,255,.95);
+		backdrop-filter: blur(5px);
 		box-shadow:0 0 20px rgba(0,0,0,0.1);
 		color:#222;
 		transition: all 0.1s ease-in-out;
@@ -828,6 +833,9 @@ body.mobilenavopen  {
 		}
 		#headerLogin {
 			color:#fff;
+			a {
+				color:#fff;
+			}
 		}
 		#nav2 {
 			a {
@@ -892,6 +900,9 @@ body.mobilenavopen  {
 				}
 				#headerLogin {
 					color:#222;
+					a {
+						color: $colour-link;
+					}
 				}	
 			}
 		}	
@@ -1168,7 +1179,7 @@ body.mobilenavopen  {
 		width:100%;
 		
 		h1 {
-			font-size: 60px;
+		
 		}
 		
 		h1,h2 {
@@ -1200,7 +1211,7 @@ body.mobilenavopen  {
 			.inner {
 				top: 50%;
 				h1 {
-					font-size: 120px;
+				
 				}
 			}
 		}
@@ -2274,10 +2285,14 @@ html {
 		.tcb_briefing {
 			background: #fff;
 			margin-bottom: 30px;
-			padding:30px;
+			padding: 40px;
+			.missionRow {
+				border-bottom: 1px solid #ccc;
+				margin-bottom: 20px;
+				padding-bottom: 20px;
+			}
 			h3 {
-				margin-bottom:10px;
-				padding-top:30px;
+				margin-bottom: 10px;
 			}
 		}
 	}
@@ -2422,8 +2437,8 @@ html {
 #attendanceRoster {
 	background: #fff;
 	margin-bottom: 30px;
-	padding:30px;
-	transition:all 0.2s linear;
+	padding: 40px;
+	transition: all 0.2s linear;
 	a,
 	input,
 	img {
@@ -2446,14 +2461,14 @@ html {
 		}
 	}
 	ul {
-		list-style:none;
+		list-style: none;
 		margin:0 0 30px 0;
 		li {
 			height:20px;
 			line-height: 20px;
-			margin-bottom:10px;
+			margin-bottom: 10px;
 			a {
-				display:inline-block;
+				display: inline-block;
 				line-height: 20px;
 			}
 		}
@@ -2461,10 +2476,10 @@ html {
 	
 	img {
 		border-radius: 100%;
-		height:20px;
-		margin-right:3px;
+		height: 20px;
+		margin-right: 3px;
 		vertical-align: top;
-		width:20px;
+		width: 20px;
 	}
 	
 }
@@ -2472,7 +2487,7 @@ html {
 	@media only screen and (min-width: 1200px) {
 		
 		#attendanceRoster {
-			padding:30px;
+			padding: 30px;
 			.wrap {
 				display:flex;
 			}
@@ -2481,8 +2496,7 @@ html {
 			}
 			.attendanceCol {
 				flex: 1 1;	
-				margin:0;
-				
+				margin: 0;
 			}
 		}
 	}
@@ -2496,7 +2510,7 @@ html {
 #slotTool {
 	background: #fff;
 	margin-bottom: 30px;
-	padding:30px;
+	padding: 40px;
 }
 
 .slotToolSlot {
