--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.26
+Version: 1.27
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -192,6 +192,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   line-height: 1;
 }
@@ -321,13 +325,13 @@ p.has-large-font-size {
     font-size: 18px;
   }
   h1 {
-    font-size: 100px;
-  }
-  h2 {
     font-size: 80px;
   }
+  h2 {
+    font-size: 55px;
+  }
   h3 {
-    font-size: 50px;
+    font-size: 45px;
   }
   h4 {
     font-size: 35px;
@@ -370,7 +374,7 @@ hr {
   border: solid #ddd;
   border-width: 1px 0 0;
   clear: both;
-  margin: 10px 0 30px;
+  margin: 20px 0;
   height: 0;
 }
 
@@ -1048,6 +1052,7 @@ body.mobilenavopen {
 }
 #header.scrollHeader {
   background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(5px);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   color: #222;
   transition: all 0.1s ease-in-out;
@@ -1063,6 +1068,9 @@ body.mobilenavopen {
   fill: #fff;
 }
 .darkHeader #header #headerLogin {
+  color: #fff;
+}
+.darkHeader #header #headerLogin a {
   color: #fff;
 }
 .darkHeader #header #nav2 a {
@@ -1114,6 +1122,9 @@ body.mobilenavopen {
   }
   #header.scrollHeader #headerLogin {
     color: #222;
+  }
+  #header.scrollHeader #headerLogin a {
+    color: #2271b1;
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -1343,9 +1354,6 @@ body.mobilenavopen {
   transform: translateY(-50%);
   width: 100%;
 }
-.banners .inner h1 {
-  font-size: 60px;
-}
 .banners .inner h1, .banners .inner h2 {
   color: #fff;
 }
@@ -1368,9 +1376,6 @@ body.mobilenavopen {
   }
   .banners .inner {
     top: 50%;
-  }
-  .banners .inner h1 {
-    font-size: 120px;
   }
 }
 .filler {
@@ -2293,11 +2298,15 @@ html .single-tribe_events #tribe-events-pg-template .tribe-events-single-event-t
 html .single-tribe_events .tcb_briefing {
   background: #fff;
   margin-bottom: 30px;
-  padding: 30px;
+  padding: 40px;
+}
+html .single-tribe_events .tcb_briefing .missionRow {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 html .single-tribe_events .tcb_briefing h3 {
   margin-bottom: 10px;
-  padding-top: 30px;
 }
 html .tribe-events-view--list {
   background: #eee;
@@ -2416,7 +2425,7 @@ html .tribe-common-g-row.tribe-events-calendar-latest-past__event-row .tribe-eve
 #attendanceRoster {
   background: #fff;
   margin-bottom: 30px;
-  padding: 30px;
+  padding: 40px;
   transition: all 0.2s linear;
 }
 #attendanceRoster a,
@@ -2478,7 +2487,7 @@ html .tribe-common-g-row.tribe-events-calendar-latest-past__event-row .tribe-eve
 #slotTool {
   background: #fff;
   margin-bottom: 30px;
-  padding: 30px;
+  padding: 40px;
 }
 
 .slotToolSlot {
