--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.27
+Version: 1.28
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2196,7 +2196,7 @@ html {
 	.single-tribe_events {
 		
 		.contentWrap {
-			background: #fafafa;
+			background: $pageBg;
 		}
 		
 		.event-banner {
