--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.27
+Version: 1.28
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2223,7 +2223,7 @@ html .post-type-archive-tribe_events {
   padding-top: 95px;
 }
 html .single-tribe_events .contentWrap {
-  background: #fafafa;
+  background: #eee;
 }
 html .single-tribe_events .event-banner {
   background: #222;
