acfe form styles

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2186,6 +2186,8 @@ html .wcpt-product-form select {
 	Events page template
 */
 
+
+
 html {
 	
 	.post-type-archive-tribe_events {
@@ -2295,6 +2297,15 @@ html {
 				margin-bottom: 10px;
 			}
 		}
+		
+		.tribe-events-sub-nav {
+			list-style:none;
+		}
+		
+		.tribe-events-sub-nav a span {
+			display: inline-block;
+		}
+		
 	}
 
 	.tribe-events-view--list {
@@ -2421,13 +2432,7 @@ html {
 		}
 	}
 	
-	//.tribe-events-calendar-list__event-featured-image-wrapper ,
-	//.tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-latest-past__event-featured-image-wrapper {
-	//	margin-bottom:20px;
-	//	padding-right:0;
-	//}
 }
-
 
 
 /*
@@ -2526,7 +2531,7 @@ html {
 input[type="submit"].slotIcon {
 	background:#fff;
 	background-size: cover;
-	border: 1px solid #000;
+	border: 2px solid #000;
 	border-radius: 100%;
 	cursor: pointer;
 	display: inline-block;
@@ -2553,20 +2558,44 @@ input[type="submit"].slotIcon {
 }
 
 
-.tribe-events-sub-nav {
-	list-style:none;
-}
-
-.tribe-events-single .tribe-events-sub-nav a span {
-	display: inline-block;
-}
-
 .unit {
 	margin-bottom:30px;
 }
 
 
 
+/* 
+	ACF Extended 
+*/
+
+.acf-field input[type=text], 
+.acf-field input[type=password], 
+.acf-field input[type=date], 
+.acf-field input[type=datetime], 
+.acf-field input[type=datetime-local], 
+.acf-field input[type=email], 
+.acf-field input[type=month], 
+.acf-field input[type=number], 
+.acf-field input[type=search], 
+.acf-field input[type=tel], 
+.acf-field input[type=time], 
+.acf-field input[type=url], 
+.acf-field input[type=week], 
+.acf-field textarea, 
+.acf-field select {
+	font-size: inherit;
+	padding: 15px;
+}
+
+.acf-fields > .acf-field {
+	padding: 20px 0; 
+}
+
+ul.acf-radio-list li, 
+ul.acf-checkbox-list li {
+	font-size: inherit;
+	line-height: inherit;
+}
 
 
 /* 
