Fix scroll to top

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.31
+Version: 1.32
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2190,9 +2190,7 @@ html .wcpt-product-form select {
 
 html {
 	
-	.post-type-archive-tribe_events {
-		padding-top:95px;
-	}
+	
 	
 	// Single event
 	.single-tribe_events {
@@ -2308,9 +2306,18 @@ html {
 		
 	}
 
+	
+	.post-type-archive-tribe_events {
+		#header {
+			background: #fff;
+		}
+		
+		
+	}
+
 	.tribe-events-view--list {
 		background: $pageBg;
-		padding-top: 0;
+		padding-top: 95px;
 		
 		#eventListingTitle {
 			flex: 0 0 100%;
