--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.32
+Version: 1.33
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -609,7 +609,7 @@ select {
 		-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
 	width: 100%;
-	z-index: 999;
+	z-index: 500;
 }
 
 select::-ms-expand {
@@ -1926,9 +1926,12 @@ body.mobilenavopen  {
 		
 	}
 	
+.searchPage {
+	max-width:600px;
+	padding: 40px 20px;
+	text-align: center;
+}
 	
-
-/* Contact */
 
 
 /* footer */
