remove login in header, start testing manual wiki

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,10 @@ q:before, q:after {
 
 /* #Basic Styles */
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	background: #fff; 
 	font-size: 16px;
