--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.34
+Version: 1.35
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -178,8 +178,90 @@ Primary Branch: main
   box-sizing: border-box;
 }
 
-/* #Reset & Basics (Inspired by E. Meyers) */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+/* 
+	Reset & Basics (Inspired by E. Meyers)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -188,7 +270,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -200,21 +292,27 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: "";
   content: none;
 }
 
-/* #Basic Styles */
+/*
+	Basic Styles
+*/
 html {
   scroll-behavior: smooth;
 }
@@ -237,8 +335,15 @@ body.loaded {
   transition: opacity 0.5s linear;
 }
 
-/* #Typography */
-h1, h2, h3, h4, h5, h6 {
+/*
+	Typography
+*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #222;
   font-family: "Bebas Neue", arial, sans-serif;
   font-weight: 400;
@@ -247,11 +352,19 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 12px;
 }
 
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
   font-weight: inherit;
   text-decoration: none;
 }
@@ -354,7 +467,8 @@ p.has-large-font-size {
   }
 }
 /*	Blockquotes  */
-blockquote, blockquote p {
+blockquote,
+blockquote p {
   color: #222;
   font-style: normal;
 }
@@ -370,7 +484,9 @@ blockquote cite {
   font-size: 12px;
 }
 
-blockquote cite a, blockquote cite a:visited, blockquote cite a:visited {
+blockquote cite a,
+blockquote cite a:visited,
+blockquote cite a:visited {
   color: #555;
 }
 
@@ -382,15 +498,19 @@ hr {
   height: 0;
 }
 
-/* #Links */
-a, a:visited {
+/*
+	Links
+*/
+a,
+a:visited {
   color: #2271b1;
   font-weight: bold;
   text-decoration: underline;
   transition: all 0.2s linear;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: rgb(46.9620853081, 139.8151658768, 215.0379146919);
   transition: all 0.2s linear;
 }
@@ -403,12 +523,14 @@ a:active {
   background: inherit;
 }
 
-p a, p a:visited {
+p a,
+p a:visited {
   line-height: inherit;
 }
 
 /* #Lists */
-ul, ol {
+ul,
+ol {
   margin: 0 0 32px 32px;
 }
 
@@ -420,8 +542,10 @@ ol {
   list-style: decimal outside;
 }
 
-ul ul, ul ol,
-ol ol, ol ul {
+ul ul,
+ul ol,
+ol ol,
+ol ul {
   margin: 0 0 0 30px;
 }
 
@@ -437,7 +561,9 @@ dd {
   margin: 0 0 0 30px;
 }
 
-/* #Notification Styles */
+/*
+	Notification Styles
+*/
 .info {
   background: #2271b1;
   color: #fff;
@@ -450,7 +576,8 @@ dd {
 }
 
 .sent .wpcf7-response-output,
-.positive, .wpcf7-mail-sent-ok {
+.positive,
+.wpcf7-mail-sent-ok {
   background-color: #006600;
   background-image: url(images/icon-pos.svg);
   background-position: 10px 9px;
@@ -499,7 +626,9 @@ span.wpcf7-not-valid-tip {
   display: none;
 }
 
-/* CSS animation for CF7 ajax loader */
+/*
+	CSS animation for CF7 ajax loader
+*/
 .fa-spin {
   -webkit-animation: fa-spin 2s infinite linear;
   animation: fa-spin 2s infinite linear;
@@ -607,12 +736,14 @@ q:after {
   float: right;
 }
 
-.imgleft, .alignleft {
+.imgleft,
+.alignleft {
   float: left;
   margin: 0 20px 20px 0;
 }
 
-.imgright, .alignright {
+.imgright,
+.alignright {
   float: right;
   margin: 0 0 20px 20px;
 }
@@ -626,7 +757,8 @@ q:after {
   margin: 0 auto;
 }
 
-abbr, acronym {
+abbr,
+acronym {
   font-style: italic;
   text-decoration: underline;
 }
@@ -645,18 +777,23 @@ th {
   background: #eee;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #666;
   padding: 10px;
 }
 
-/* #Images */
+/*
+	Images
+*/
 img {
   height: auto;
   max-width: 100%;
 }
 
-/* #Buttons */
+/*
+	Buttons
+*/
 button {
   background: transparent;
   border: 0;
@@ -729,7 +866,9 @@ input[type=submit]:disabled {
     font-size: 18px;
   }
 }
-/* #Forms */
+/*
+	Forms
+*/
 form {
   margin-bottom: 20px;
 }
@@ -849,7 +988,9 @@ input[type=checkbox] {
     font-size: 18px;
   }
 }
-/* Grid < 800px */
+/*
+	Grid < 800px
+*/
 .container {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -1350,6 +1491,17 @@ body.mobilenavopen {
 .banners {
   position: relative;
 }
+.banners img {
+  display: block;
+}
+.banners .the_champ_login_container {
+  margin: 0 auto;
+  max-width: 600px;
+}
+.banners .the_champ_login_container label {
+  color: #222;
+  font-size: 16px;
+}
 .banners .inner {
   color: #fff;
   position: absolute;
@@ -1358,7 +1510,8 @@ body.mobilenavopen {
   transform: translateY(-50%);
   width: 100%;
 }
-.banners .inner h1, .banners .inner h2 {
+.banners .inner h1,
+.banners .inner h2 {
   color: #fff;
 }
 .banners .inner a {
@@ -1653,7 +1806,8 @@ body.mobilenavopen {
   text-align: center;
   width: calc(96% - 24px);
 }
-.text-and-image .text-block h2, .text-and-image .text-block h3 {
+.text-and-image .text-block h2,
+.text-and-image .text-block h3 {
   color: #fff;
 }
 
@@ -2238,7 +2392,9 @@ html .single-tribe_events .event-banner {
   min-height: 400px;
   position: relative;
 }
-html .single-tribe_events .event-banner h1, html .single-tribe_events .event-banner h2, html .single-tribe_events .event-banner h3 {
+html .single-tribe_events .event-banner h1,
+html .single-tribe_events .event-banner h2,
+html .single-tribe_events .event-banner h3 {
   color: #fff;
 }
 html .single-tribe_events .event-banner h3 {
@@ -2435,7 +2591,7 @@ html .tribe-common-g-row.tribe-events-calendar-latest-past__event-row .tribe-eve
 }
 
 /*
-	Attendance tool
+	Attendance panel
 */
 #attendanceRoster {
   background: #fff;
@@ -2580,7 +2736,7 @@ ul.acf-checkbox-list li {
   line-height: inherit;
 }
 
-/* 
+/*
 	Knowledge base/wiki pages
 */
 html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset #eckb-article-body h1,
