--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.36
+Version: 1.37
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1508,7 +1508,7 @@ body.mobilenavopen {
 		display: block;
 	}
 
-	.the_champ_login_container {
+	.the_champ_login_container .heateor_ss_sl_optin_container {
 		margin: 0 auto;
 		max-width: 600px;
 
