--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.37
+Version: 1.38
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -172,6 +172,23 @@ Primary Branch: main
     transition: all 0.1s linear rotate(0.0001deg);
   }
 }
+/*
+Theme Name: 3CB 2024 
+Theme URI: https://byintention.co
+Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
+Author: Nick "Badger" Hayward
+Author URI: https://byintention.co
+Version: 1.38
+Tags: 
+License: GPL3
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
+
+Text Domain: tcb24
+
+GitHub Theme URI: byintention/3cb24
+Primary Branch: main
+
+*/
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -413,14 +430,12 @@ strong {
   font-weight: 700;
 }
 
-small {
-  font-size: 80%;
-}
-
+.has-small-font-size,
 p.has-small-font-size {
   font-size: 12px;
 }
 
+.has-large-font-size,
 p.has-large-font-size {
   font-size: 18px;
   line-height: 1.4;
@@ -459,9 +474,11 @@ p.has-large-font-size {
   h6 {
     font-size: 23px;
   }
+  .has-small-font-size,
   p.has-small-font-size {
     font-size: 15px;
   }
+  .has-large-font-size,
   p.has-large-font-size {
     font-size: 21px;
   }
@@ -655,10 +672,6 @@ span.wpcf7-not-valid-tip {
   }
 }
 /* hide original loader */
-.wpcf7-spinner {
-  display: none;
-}
-
 .submitting .wpcf7-spinner {
   display: inline-block;
 }
@@ -667,10 +680,10 @@ span.wpcf7-not-valid-tip {
 .wpcf7-spinner {
   -webkit-animation: fa-spin 1s infinite linear;
   animation: fa-spin 1s infinite linear;
-  height: 36px;
-  margin-left: 10px;
+  height: 25px;
   transform-origin: center center;
   vertical-align: middle;
+  width: 25px;
 }
 
 .wpcf7-spinner:before {
@@ -1895,7 +1908,7 @@ body.mobilenavopen {
 .blogBanner {
   height: 400px;
   margin-bottom: 40px;
-  overflow: hidden;
+  z-index: 600;
 }
 .blogBanner .banners .container {
   max-width: 1200px;
@@ -1917,6 +1930,10 @@ body.mobilenavopen {
     max-width: 1200px;
   }
 }
+.bread {
+  padding-bottom: 30px;
+}
+
 .error404 .contentWrap,
 .search .contentWrap,
 .search-results .contentWrap,
@@ -1959,24 +1976,23 @@ body.mobilenavopen {
   width: 100%;
 }
 
-.postmetadata {
+.postMetadata {
   border-top: 1px solid #eee;
-  font-size: 12px;
-  padding: 5px;
+  padding: 10px 0;
 }
-.postmetadata span {
+.postMetadata span {
   display: inline-block;
 }
 
-.blogcat {
+.blogCat {
   padding: 0 16px 0 0;
 }
 
-.blogdate {
+.blogDate {
   padding: 0 16px 0 0;
 }
 
-.blogcomments {
+.blogComments {
   color: #999;
   padding: 0 16px 0 0;
 }
@@ -2162,11 +2178,11 @@ body.mobilenavopen {
 }
 .searchPage {
   max-width: 600px;
-  padding: 40px 20px;
+  padding: 40px 20px 100px 20px;
   text-align: center;
 }
 
-/* footer */
+/* Footer */
 #footer {
   background: #222;
   color: #ddd;
@@ -2741,165 +2757,159 @@ ul.acf-checkbox-list li {
 }
 
 /*
-	Knowledge base/wiki pages
+Theme Name: 3CB 2024 
+Theme URI: https://byintention.co
+Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
+Author: Nick "Badger" Hayward
+Author URI: https://byintention.co
+Version: 1.38
+Tags: 
+License: GPL3
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
+
+Text Domain: tcb24
+
+GitHub Theme URI: byintention/3cb24
+Primary Branch: main
+
 */
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset #eckb-article-body h1,
-html .eckb-kb-template #eckb-article-page-container-v2 #eckb-article-body h1 {
-  font-family: "D-din";
-  font-size: 50px;
-  font-weight: 700;
-  margin-bottom: 16px !important;
-  padding: 40px;
-  text-transform: none;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container {
-  background: #222;
-  margin-bottom: 30px !important;
-  padding: 145px 0 70px 0;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container div.epkb-doc-search-container__title,
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container h1.epkb-doc-search-container__title,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container div.epkb-doc-search-container__title,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container h1.epkb-doc-search-container__title {
-  color: #fff;
-  font-weight: bold !important;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container #epkb_search_form #epkb_search_terms,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container #epkb_search_form #epkb_search_terms {
-  border: 2px solid #fff;
-  border-right: 0;
-  border-radius: 0 !important;
-  font-family: "D-DIN", arial, sans-serif;
-  padding-left: 20px !important;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container #epkb_search_form #epkb-search-kb,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container #epkb_search_form #epkb-search-kb {
-  background: #2271b1;
-  border: #2271b1;
-  border-radius: 0 !important;
-  font-family: "D-DIN", arial, sans-serif;
-  text-shadow: none;
-  transition: all 0.2s linear;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container #epkb_search_form #epkb-search-kb:hover,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container #epkb_search_form #epkb-search-kb:hover {
-  background: rgb(46.9620853081, 139.8151658768, 215.0379146919);
-  border: rgb(46.9620853081, 139.8151658768, 215.0379146919);
-  transition: all 0.2s linear;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-doc-search-container .epkb-doc-search-container__title,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-doc-search-container .epkb-doc-search-container__title {
-  color: #222;
-  font-weight: 700;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full {
-  background: #eee;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container {
-  background: transparent;
-  margin-bottom: 0 !important;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container a,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container a {
-  color: #2271b1;
-  text-decoration: none;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container a:hover,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container a:hover {
-  color: #222;
-  text-decoration: underline;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list {
-  background: #eee;
-  display: flex !important;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-bottom: 50px !important;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section {
-  background: #fff;
-  box-sizing: border-box;
-  flex: 0 0 31.333% !important;
-  font-size: 16px !important;
-  margin: 0 1% 2% 1% !important;
-  padding: 30px;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section h2.epkb-cat-name,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section h2.epkb-cat-name {
-  color: #222 !important;
-  font-weight: bold !important;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .eckb-article-title__text,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .eckb-article-title__text {
-  color: #2271b1;
-  font-size: 16px;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .eckb-article-title__text:hover,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .eckb-article-title__text:hover {
-  color: #222;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text {
-  color: #2271b1;
-  font-size: 16px;
-  font-weight: bold;
-  margin-right: 5px;
-  margin-left: 5px;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text a,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text a {
-  color: #2271b1;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text a:hover,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-category-level-2-3__cat-name_text a:hover {
-  color: #222;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-sub-category li,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-sub-category li {
-  padding: 5px 0;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-cat-count,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-cat-count {
-  font-size: 10px;
-  padding: 3px 6px;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-section-body,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section .epkb-section-body {
-  padding: 0 0 20px 10px;
-}
-html .eckb-kb-template #epkb-main-page-container.epkb-css-full-reset .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section li .epkb-category-level-2-3__cat-icon:before,
-html .eckb-kb-template #eckb-article-page-container-v2 .epkb-full #epkb-content-container .epkb-section-container .eckb-categories-list section li .epkb-category-level-2-3__cat-icon:before {
-  content: "\f115";
-  font-family: "fontawesome";
+#wikiSearch {
+  margin: 0 auto;
+  max-width: 400px;
   position: relative;
-  top: 2px;
-  vertical-align: middle;
 }
-html .eckb-kb-template .tax-epkb_post_type_1_category {
-  padding-top: 95px;
+#wikiSearch .wrapper {
+  background: #fff;
 }
-html #eckb-categories-archive-container-v2 {
-  padding-top: 95px;
-  width: 1176px;
+#wikiSearch #s {
+  padding-left: 15px;
 }
-html #eckb-categories-archive-container-v2 #eckb-categories-archive__body__content #eckb-categories-archive__body__content__body .eckb-article-read-more {
+#wikiSearch #datafetch {
+  background: #fff;
   color: #2271b1;
-  font-style: normal !important;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 0;
+  position: absolute;
+  text-align: left;
+  transition: all 0.1s linear;
+  width: 100%;
+  z-index: 500;
 }
-html #eckb-categories-archive-container-v2 #eckb-categories-archive__body__content #eckb-categories-archive__body__content__body .eckb-article-read-more .eckb-article-read-more-text {
-  font-style: normal;
+#wikiSearch #datafetch.show {
+  max-height: 250px;
+  opacity: 1;
+  transition: all 0.1s linear;
 }
-html #eckb-article-page-container-v2 #eckb-article-body {
+#wikiSearch #datafetch ul {
+  list-style: none;
+  margin: 15px 0 15px 15px;
+}
+#wikiSearch #datafetch ul li a {
+  color: #2271b1;
+}
+#wikiSearch label {
+  display: none;
+}
+#wikiSearch input {
+  border: 0;
+  margin: 0;
+  vertical-align: baseline;
+}
+
+#tcbWikiContent {
+  position: relative;
+  z-index: 500;
+}
+
+#tcbWikiListing #tcbWikiContent {
+  padding-bottom: 50px;
+  max-width: 800px;
+}
+#tcbWikiListing .banners h3 {
+  color: #fff;
+}
+#tcbWikiListing .tcbWikiArticles {
+  width: 100%;
+}
+
+#tcbWiki #tcbWikiContent {
+  justify-content: center;
   padding-bottom: 50px;
 }
-html #eckb-article-page-container-v2 #eckb-article-body #eckb-article-content-body h2 {
-  font-size: 45px;
-  padding-top: 20px;
+#tcbWiki .wikiCategory {
+  margin-bottom: 2%;
+}
+#tcbWiki .wikiCategory h3 {
+  margin-bottom: 20px;
+}
+#tcbWiki .wikiCategory ul {
+  list-style: none;
+  margin: 0 0 15px 0;
+}
+#tcbWiki .wikiCategory a {
+  font-weight: normal;
+  text-decoration: none;
+}
+#tcbWiki .wikiDocs li,
+#tcbWiki .wikiDocs li:active {
+  background-image: url(images/wiki-doc.svg);
+  background-position: left 5px;
+  background-repeat: no-repeat;
+  background-size: 14px;
+  padding-left: 25px;
+}
+#tcbWiki .wikiDocs li a,
+#tcbWiki .wikiDocs li:active a {
+  background: none;
+}
+#tcbWiki .wikiSubcats li {
+  background-image: url(images/wiki-folder.svg);
+  background-position: left 5px;
+  background-repeat: no-repeat;
+  background-size: 14px;
+  padding-left: 25px;
+}
+#tcbWiki .wikiSubcats li a {
+  background: none;
+  font-weight: bold;
+}
+
+#tcbWikiSingle .postMetadata {
+  border: 0;
+  margin-bottom: 30px;
+  padding: 0;
+}
+#tcbWikiSingle h1, #tcbWikiSingle h2, #tcbWikiSingle h3, #tcbWikiSingle h4, #tcbWikiSingle h5, #tcbWikiSingle h6 {
+  padding-top: 110px;
+  margin-top: -110px;
+}
+#tcbWikiSingle .entry h1 {
+  margin-bottom: 5px;
+}
+#tcbWikiSingle #toc {
+  max-height: calc(100vh - 140px);
+  overflow-y: auto;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 110px;
+}
+#tcbWikiSingle #toc #toclist {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+#tcbWikiSingle #toc #toclist ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 10px;
+}
+#tcbWikiSingle #toc a {
+  display: block;
+  margin-bottom: 5px;
+  text-decoration: none;
 }
 
 /*! PhotoSwipe main CSS by Dmytro Semenov | photoswipe.com */
